--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".EditProfile">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,11 +16,20 @@
         android:background="@drawable/grad">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profilePicture"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="40dp"
-
+            android:src="@drawable/ic_user"
             />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/editProfilePic"
+            android:layout_width="40dp"
+            android:layout_height="70dp"
+    android:layout_gravity="right"
+            android:layout_marginRight="100dp"
+            android:src="@drawable/ic_baseline_photo_camera_24"></de.hdodenhof.circleimageview.CircleImageView>
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,8 +37,10 @@
             android:text="User1"
             android:textStyle="bold"
             android:textSize="18dp"
-            android:layout_marginTop="10dp" />
+             />
     </LinearLayout>
+
+
 
 
 
@@ -67,14 +78,22 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/editText_userName"
+                    android:id="@+id/edit_userName"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="User1"
+                    android:layout_height="43dp"
                     android:background="@null"
-                    />
+                    android:clickable="false"
+                    android:text="User1" />
 
             </LinearLayout>
+            <ImageView
+                android:id="@+id/editUserName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/ic_baseline_edit_24"
+                />
 
 
         </LinearLayout>
@@ -164,6 +183,24 @@
                 />
 
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/saveButton"
+                    android:layout_width="145dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="15dp"
+                    android:text="Save"
+                    android:textStyle="bold"
+                    android:textSize="18dp"
+                    android:background="@drawable/grad"
+
+                    />
+
+            </LinearLayout>
 
 
         </LinearLayout>
