--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,7 +20,7 @@
             android:id="@+id/settingsHeaderText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Settings"
+            android:text="@string/settings_banner"
             android:textAllCaps="true"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
@@ -54,7 +54,7 @@
             android:layout_width="122dp"
             android:layout_height="29dp"
             android:layout_marginStart="30dp"
-            android:text="Change password"
+            android:text="@string/settings_change_password"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -85,7 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:text="Logout"
+            android:text="@string/settings_logout"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
