--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/grad"
     tools:context=".SettingsActivity">
 
     <FrameLayout
@@ -17,7 +18,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#FFFFFF">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/logoutConstraint"
@@ -32,19 +34,20 @@
                     android:id="@+id/logoutTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="30dp"
                     android:text="@string/settings_logout"
+                    android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/imageView6"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginEnd="30dp"
+                    android:layout_marginStart="30dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@android:drawable/ic_lock_power_off" />
 
@@ -61,21 +64,22 @@
 
                 <TextView
                     android:id="@+id/changePasswordTextView"
-                    android:layout_width="122dp"
+                    android:layout_width="150dp"
                     android:layout_height="29dp"
-                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="30dp"
                     android:text="@string/settings_change_password"
+                    android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/changePasswordIcon"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginEnd="30dp"
+                    android:layout_marginStart="30dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@android:drawable/ic_menu_edit" />
 
@@ -85,7 +89,7 @@
                 android:id="@+id/settingsHeader"
                 android:layout_width="410dp"
                 android:layout_height="75dp"
-                android:background="#6C6C6C"
+                android:background="@drawable/grad"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -96,8 +100,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/settings_banner"
                     android:textAllCaps="true"
-                    android:textColor="#FFFFFF"
-                    android:textSize="18sp"
+                    android:textColor="@android:color/white"
+                    android:textSize="25sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
