--- a/app/src/main/res/layout/fragment_password_change.xml
+++ b/app/src/main/res/layout/fragment_password_change.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="25dp"
-        android:background="#C1C1C1"
+        android:background="@drawable/grad"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
             android:layout_marginTop="50dp"
             android:text="@string/settings_change_password"
             android:textAlignment="center"
-            android:textSize="18sp"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -78,8 +78,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="88dp"
             android:layout_marginTop="75dp"
-            android:backgroundTint="#4CAF50"
+            android:background="#FFFFFF"
             android:text="@string/settings_change_password_save"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/newPasswordConfirmInput" />
 
@@ -89,8 +90,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="75dp"
             android:layout_marginEnd="88dp"
-            android:backgroundTint="#F44336"
+            android:background="@drawable/grad"
             android:text="@string/settings_change_password_cancel"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/newPasswordConfirmInput" />
     </androidx.constraintlayout.widget.ConstraintLayout>
